--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "date-fns": "^4.1.0",
     "html2canvas": "^1.4.1",
     "jspdf": "^3.0.1",
+    "lucide-react": "^0.525.0",
     "qrcode.react": "^4.2.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
@@ -52,6 +53,9 @@
     ]
   },
   "devDependencies": {
-    "@types/react": "^19.1.5"
+    "@types/react": "^19.1.5",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.11"
   }
 }
